# rin

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: common.rs  cpu.rs  lib.rs  ram.rs
tests/: cpu.rs  ram.rs
