[package]
name = "rin-sys"
version = "0.1.0"
edition = "2021"
authors = ["icelain <icelain@ctemplar.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "github.com/icelain/rin"
description = "A small library to fetch system information in linux"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
